--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "cuid": "^2.1.8",
     "history": "^5.0.0",
+    "prettier": "^2.8.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
